--- a/porjekt_szkola_1/menu/about/about.css
+++ b/porjekt_szkola_1/menu/about/about.css
@@ -1,5 +1,7 @@
 body {
     background-image: url(tlo.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 .div_1 {
     background-color: black;
@@ -52,4 +54,23 @@ body {
 }
 .mapouter {
     margin-left:10.5%;
+}
+
+.cooks {
+    margin-top: 24%;
+    background-color: black;
+    color:white;
+    width: 25%;
+    border-radius: 30px;
+    text-align: center;
+    position: absolute;
+    padding-bottom: 20px;
+    margin-left: 1%;
+    
+}
+
+.nic {
+    visibility: hidden;
+    height:20px
+
 }
