--- a/porjekt_szkola_1/menu/contact/contact.css
+++ b/porjekt_szkola_1/menu/contact/contact.css
@@ -8,8 +8,8 @@ body {
     background-repeat: no-repeat;
     background-size: 100%;
     font-family: 'Abyssinica SIL', serif;
-  
-
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 html {
@@ -30,4 +30,44 @@ html {
     font-size: 40px;
 }
     
+.content {
+    font-size:15px;
+    text-align:center;
+}
 
+a {
+    color:black;
+    text-decoration: none;
+}
+
+
+.mail {
+    background-color:rgba(255,248,188,.7);
+    display: table;
+    justify-content: center;
+    align-items: center;
+    margin-left: 35%;
+    flex-basis: 0;
+    text-align: center;
+    padding-top: 5px;
+    width: 30%;
+}
+
+.mail input, .mail select {
+    width: 90%;
+    margin: 10px 20px 10px 20px;
+    height: 35px;
+    border: 1px;
+    border-style: solid;
+    background-color: #FFE7BF;
+    font-size: 15px;
+}
+* {
+    box-sizing: border-box;
+}
+
+.nic {
+    visibility: hidden;
+    height:20px
+
+}
