--- a/porjekt_szkola_1/menu/menuu/menucss.css
+++ b/porjekt_szkola_1/menu/menuu/menucss.css
@@ -4,25 +4,25 @@ body {
     background-repeat: no-repeat;
     background-size: 100%;
     font-family: 'Abyssinica SIL', serif;
-  
+    background-attachment: fixed;
 
 }
 
 .menuu {
-    font-size: 23px;
+    font-size: 25px;
     float:left;
     margin-top: 70px;
     color: black;
-    text-shadow: 2px 2px 0px rgba(255,255,255,.3);
+    text-shadow: 1px 2px 0px rgba(255,255,255,.6);
     font-weight: bold;
 }
 
 .menuu2 {
-    font-size: 24px;
+    font-size: 25px;
     float:right;
     margin-top: 70px;
     color: black;
-    text-shadow: 2px 2px 0px rgba(255,255,255,.3);
+    text-shadow: 1px 2px 0px rgba(255,255,255,.7);
     font-weight: bold;
     position: absolute;
     margin-left: 25%;
@@ -45,4 +45,20 @@ body {
 .menuu2 h2 {
     color: grey;
     text-shadow: 2px 3px 0px rgba(0,0,0,2); 
+}
+
+.dishes a {
+    color:white;
+    text-decoration: none;
+    font-size: 40px;
+    padding: 15px;
+}
+
+.dishes {
+    position: absolute;
+    right: 0%;
+    margin-right: 3%;
+    margin-top: 3%;
+    background-color: rgba(255,233,160,.5);
+    border-radius: 40px;
 }
